# weremake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  go.mod  main.go
cmakecreate/: cmake.go
docs/: manual.md
init/: init.go
src/: main.cpp
src/core/: cli.cppm
tooling/: build.ps1
werecreate/: init.go
